// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UnitFormService createUnit$ should create unit 1`] = `
Object {
  "data": Object {
    "address": Object {
      "address": "Ág u. 1.",
      "city": "Budapest",
      "country": "Magyarország",
      "location": Object {
        "lat": 47,
        "lng": null,
        "lon": 19,
      },
      "postalCode": "1021",
      "title": "HQ",
    },
    "chainId": "test_chain_1_id",
    "createdAt": Any<String>,
    "description": Object {
      "de": null,
      "en": "Test unit #test_unit_1_id description",
      "hu": "Teszt unit #test_unit_1_id leírás",
    },
    "email": null,
    "externalId": null,
    "floorMap": null,
    "groupId": "test_group_1_id",
    "id": "test_ADMIN_UNIT_IT_UNIT_ID_01",
    "isAcceptingOrders": true,
    "isActive": true,
    "lanes": Array [
      Object {
        "color": "#e72222",
        "id": "lane_01",
        "name": "bár",
      },
      Object {
        "color": "#e123ef",
        "id": "lane_02",
        "name": "konyha",
      },
    ],
    "lastOrderNum": null,
    "location": Object {
      "lat": 47,
      "lng": null,
      "lon": 19,
    },
    "merchantId": null,
    "name": "Késdobáló S",
    "open": Object {
      "from": "1970-01-01",
      "to": "2970-01-01",
    },
    "openingHours": null,
    "orderPaymentPolicy": "prepay",
    "orderPolicy": null,
    "packagingTaxPercentage": 27,
    "paymentModes": Array [
      Object {
        "caption": null,
        "method": "cash",
        "type": "cash",
      },
      Object {
        "caption": null,
        "method": "card",
        "type": "card",
      },
      Object {
        "caption": null,
        "method": "inapp",
        "type": "stripe",
      },
    ],
    "phone": null,
    "pos": null,
    "ratingPolicies": null,
    "serviceFeePolicy": null,
    "soldOutVisibilityPolicy": null,
    "supportedOrderModes": Array [
      "pickup",
      "instant",
    ],
    "supportedServingModes": Array [
      "inPlace",
      "takeAway",
    ],
    "timeZone": null,
    "tipPolicy": null,
    "updatedAt": Any<String>,
  },
  "type": "insert",
}
`;

exports[`UnitFormService createUnitFormGroup should create new form group 1`] = `
Object {
  "address": Object {
    "address": "",
    "city": "",
    "country": "",
    "postalCode": "",
    "title": "",
  },
  "chainId": "",
  "description": Object {
    "de": "",
    "en": "",
    "hu": "",
  },
  "email": "",
  "externalId": "",
  "groupId": "",
  "isActive": "",
  "lanes": Array [],
  "location": Object {
    "lat": 0,
    "lon": 0,
  },
  "merchantId": "",
  "name": "",
  "open": Object {
    "from": "",
    "to": "",
  },
  "openingHours": Object {
    "custom": Array [],
    "fri": Object {
      "from": "",
      "to": "",
    },
    "mon": Object {
      "from": "",
      "to": "",
    },
    "sat": Object {
      "from": "",
      "to": "",
    },
    "sun": Object {
      "from": "",
      "to": "",
    },
    "thu": Object {
      "from": "",
      "to": "",
    },
    "tue": Object {
      "from": "",
      "to": "",
    },
    "wed": Object {
      "from": "",
      "to": "",
    },
  },
  "orderPaymentPolicy": "prepay",
  "orderPolicy": "full",
  "packagingTaxPercentage": "",
  "paymentModes": Array [],
  "phone": "",
  "pos": Object {
    "type": "anyupp",
  },
  "ratingPolicies": Array [],
  "soldOutVisibilityPolicy": "faded",
  "supportedOrderModes": Array [
    "instant",
  ],
  "supportedServingModes": Array [
    "inPlace",
  ],
  "timeZone": "",
  "tipPolicy": Object {
    "description": Object {
      "de": "",
      "en": "",
      "hu": "",
    },
    "minOtherAmount": null,
    "percents": Array [],
    "title": Object {
      "de": "",
      "en": "",
      "hu": "",
    },
  },
}
`;

exports[`UnitFormService createUnitFormGroup should create update form group 1`] = `
Object {
  "address": Object {
    "address": "",
    "city": "",
    "country": "",
    "postalCode": "",
    "title": "",
  },
  "chainId": "",
  "description": Object {
    "de": "",
    "en": "",
    "hu": "",
  },
  "email": "",
  "externalId": "",
  "groupId": "",
  "isActive": "",
  "lanes": Array [],
  "location": Object {
    "lat": 0,
    "lon": 0,
  },
  "merchantId": "",
  "name": "",
  "open": Object {
    "from": "",
    "to": "",
  },
  "openingHours": Object {
    "custom": Array [],
    "fri": Object {
      "from": "",
      "to": "",
    },
    "mon": Object {
      "from": "",
      "to": "",
    },
    "sat": Object {
      "from": "",
      "to": "",
    },
    "sun": Object {
      "from": "",
      "to": "",
    },
    "thu": Object {
      "from": "",
      "to": "",
    },
    "tue": Object {
      "from": "",
      "to": "",
    },
    "wed": Object {
      "from": "",
      "to": "",
    },
  },
  "orderPaymentPolicy": "prepay",
  "orderPolicy": "full",
  "packagingTaxPercentage": "",
  "paymentModes": Array [],
  "phone": "",
  "pos": Object {
    "type": "anyupp",
  },
  "ratingPolicies": Array [],
  "soldOutVisibilityPolicy": "faded",
  "supportedOrderModes": Array [
    "instant",
  ],
  "supportedServingModes": Array [
    "inPlace",
  ],
  "timeZone": "",
  "tipPolicy": Object {
    "description": Object {
      "de": "",
      "en": "",
      "hu": "",
    },
    "minOtherAmount": null,
    "percents": Array [],
    "title": Object {
      "de": "",
      "en": "",
      "hu": "",
    },
  },
}
`;

exports[`UnitFormService updateRKeeperData$ should update the RKeepeR AnyUPP password 1`] = `
Object {
  "data": Object {
    "address": Object {
      "address": "Ág u. 1.",
      "city": "Budapest",
      "country": "Magyarország",
      "location": Object {
        "lat": 47,
        "lng": null,
        "lon": 19,
      },
      "postalCode": "1021",
      "title": "HQ",
    },
    "chainId": "test_chain_1_id",
    "createdAt": Any<String>,
    "description": Object {
      "de": null,
      "en": "Test unit #test_unit_1_id description",
      "hu": "Teszt unit #test_unit_1_id leírás",
    },
    "email": null,
    "externalId": "restaurantid",
    "floorMap": null,
    "groupId": "test_group_1_id",
    "id": "test_ADMIN_UNIT_IT_UNIT_ID_01",
    "isAcceptingOrders": true,
    "isActive": true,
    "lanes": Array [
      Object {
        "color": "#e72222",
        "id": "lane_01",
        "name": "bár",
      },
      Object {
        "color": "#e123ef",
        "id": "lane_02",
        "name": "konyha",
      },
    ],
    "lastOrderNum": null,
    "location": Object {
      "lat": 47,
      "lng": null,
      "lon": 19,
    },
    "merchantId": null,
    "name": "Késdobáló S",
    "open": Object {
      "from": "1970-01-01",
      "to": "2970-01-01",
    },
    "openingHours": null,
    "orderPaymentPolicy": "prepay",
    "orderPolicy": null,
    "packagingTaxPercentage": 27,
    "paymentModes": Array [
      Object {
        "caption": null,
        "method": "cash",
        "type": "cash",
      },
      Object {
        "caption": null,
        "method": "card",
        "type": "card",
      },
      Object {
        "caption": null,
        "method": "inapp",
        "type": "stripe",
      },
    ],
    "phone": null,
    "pos": Object {
      "rkeeper": Object {
        "anyuppPassword": Any<String>,
        "anyuppUsername": "ANYUPP_USERNAME",
        "endpointUri": "https://testendpoint.ucs.hu/wp-json/vendor/v1",
        "rkeeperPassword": "f3e7c8260b2f9b1cc62208a441410a",
        "rkeeperUsername": "590_49_985_540",
      },
      "type": "rkeeper",
    },
    "ratingPolicies": Array [
      Object {
        "description": Object {
          "de": null,
          "en": "Desc",
          "hu": null,
        },
        "key": "question1",
        "ratings": Array [
          Object {
            "icon": null,
            "text": Object {
              "de": null,
              "en": "good",
              "hu": null,
            },
            "value": 1,
          },
        ],
        "title": Object {
          "de": null,
          "en": "Question",
          "hu": null,
        },
      },
    ],
    "serviceFeePolicy": Object {
      "percentage": 10,
      "type": "applicable",
    },
    "soldOutVisibilityPolicy": null,
    "supportedOrderModes": Array [
      "pickup",
      "instant",
    ],
    "supportedServingModes": Array [
      "inPlace",
      "takeAway",
    ],
    "timeZone": null,
    "tipPolicy": Object {
      "description": null,
      "minOtherAmount": null,
      "percents": Array [
        2,
      ],
      "title": null,
    },
    "updatedAt": Any<String>,
  },
  "type": "update",
}
`;

exports[`UnitFormService updateRKeeperData$ should update the RKeepeR POS content 1`] = `
Object {
  "data": Object {
    "address": Object {
      "address": "Ág u. 1.",
      "city": "Budapest",
      "country": "Magyarország",
      "location": Object {
        "lat": 47,
        "lng": null,
        "lon": 19,
      },
      "postalCode": "1021",
      "title": "HQ",
    },
    "chainId": "test_chain_1_id",
    "createdAt": Any<String>,
    "description": Object {
      "de": null,
      "en": "Test unit #test_unit_1_id description",
      "hu": "Teszt unit #test_unit_1_id leírás",
    },
    "email": null,
    "externalId": "restaurantid",
    "floorMap": null,
    "groupId": "test_group_1_id",
    "id": "test_ADMIN_UNIT_IT_UNIT_ID_01",
    "isAcceptingOrders": true,
    "isActive": true,
    "lanes": Array [
      Object {
        "color": "#e72222",
        "id": "lane_01",
        "name": "bár",
      },
      Object {
        "color": "#e123ef",
        "id": "lane_02",
        "name": "konyha",
      },
    ],
    "lastOrderNum": null,
    "location": Object {
      "lat": 47,
      "lng": null,
      "lon": 19,
    },
    "merchantId": null,
    "name": "Késdobáló S",
    "open": Object {
      "from": "1970-01-01",
      "to": "2970-01-01",
    },
    "openingHours": null,
    "orderPaymentPolicy": "prepay",
    "orderPolicy": null,
    "packagingTaxPercentage": 27,
    "paymentModes": Array [
      Object {
        "caption": null,
        "method": "cash",
        "type": "cash",
      },
      Object {
        "caption": null,
        "method": "card",
        "type": "card",
      },
      Object {
        "caption": null,
        "method": "inapp",
        "type": "stripe",
      },
    ],
    "phone": null,
    "pos": Object {
      "rkeeper": Object {
        "anyuppPassword": Any<String>,
        "anyuppUsername": "test-anyuppUsername",
        "endpointUri": "test-endpointUri",
        "rkeeperPassword": "test-rkeeperPassword",
        "rkeeperUsername": "test-rkeeperUsername",
      },
      "type": "rkeeper",
    },
    "ratingPolicies": Array [
      Object {
        "description": Object {
          "de": null,
          "en": "Desc",
          "hu": null,
        },
        "key": "question1",
        "ratings": Array [
          Object {
            "icon": null,
            "text": Object {
              "de": null,
              "en": "good",
              "hu": null,
            },
            "value": 1,
          },
        ],
        "title": Object {
          "de": null,
          "en": "Question",
          "hu": null,
        },
      },
    ],
    "serviceFeePolicy": Object {
      "percentage": 10,
      "type": "applicable",
    },
    "soldOutVisibilityPolicy": null,
    "supportedOrderModes": Array [
      "pickup",
      "instant",
    ],
    "supportedServingModes": Array [
      "inPlace",
      "takeAway",
    ],
    "timeZone": null,
    "tipPolicy": Object {
      "description": null,
      "minOtherAmount": null,
      "percents": Array [
        2,
      ],
      "title": null,
    },
    "updatedAt": Any<String>,
  },
  "type": "update",
}
`;

exports[`UnitFormService updateUnit$ should update unit 1`] = `
Object {
  "data": Object {
    "address": Object {
      "address": "Ág u. 1.",
      "city": "Budapest",
      "country": "Magyarország",
      "location": Object {
        "lat": 47,
        "lng": null,
        "lon": 19,
      },
      "postalCode": "1021",
      "title": "HQ",
    },
    "chainId": "test_chain_1_id",
    "createdAt": Any<String>,
    "description": Object {
      "de": null,
      "en": "Test unit #test_unit_1_id description",
      "hu": "Teszt unit #test_unit_1_id leírás",
    },
    "email": null,
    "externalId": null,
    "floorMap": null,
    "groupId": "test_group_1_id",
    "id": "test_ADMIN_UNIT_IT_UNIT_ID_01",
    "isAcceptingOrders": true,
    "isActive": true,
    "lanes": Array [
      Object {
        "color": "#e72222",
        "id": "lane_01",
        "name": "bár",
      },
      Object {
        "color": "#e123ef",
        "id": "lane_02",
        "name": "konyha",
      },
    ],
    "lastOrderNum": null,
    "location": Object {
      "lat": 47,
      "lng": null,
      "lon": 19,
    },
    "merchantId": null,
    "name": "[object Object] MOD",
    "open": Object {
      "from": "1970-01-01",
      "to": "2970-01-01",
    },
    "openingHours": null,
    "orderPaymentPolicy": "prepay",
    "orderPolicy": null,
    "packagingTaxPercentage": 27,
    "paymentModes": Array [
      Object {
        "caption": null,
        "method": "cash",
        "type": "cash",
      },
      Object {
        "caption": null,
        "method": "card",
        "type": "card",
      },
      Object {
        "caption": null,
        "method": "inapp",
        "type": "stripe",
      },
    ],
    "phone": null,
    "pos": null,
    "ratingPolicies": null,
    "serviceFeePolicy": null,
    "soldOutVisibilityPolicy": null,
    "supportedOrderModes": Array [
      "pickup",
    ],
    "supportedServingModes": Array [
      "takeAway",
    ],
    "timeZone": null,
    "tipPolicy": null,
    "updatedAt": Any<String>,
  },
  "type": "update",
}
`;
